--- a/src/app/modulos/adminproductos/categorias/listar-categorias/listar-categorias.component.html
+++ b/src/app/modulos/adminproductos/categorias/listar-categorias/listar-categorias.component.html
@@ -22,8 +22,8 @@
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let element">
-        <span class="material-icons">edit</span>
-        <span class="material-icons">delete</span>
+        <span (click)="addEditCategoria(element.id)" class="material-icons">edit</span>
+        <span (click)="addDeleteModals(element.id)" class="material-icons">delete</span>
       </td>
     </ng-container>
 
@@ -38,3 +38,4 @@
   >
   </mat-paginator>
 </div>
+
