--- a/src/app/modulos/adminproductos/vehiculos/crear-vehiculos/crear-vehiculos.component.html
+++ b/src/app/modulos/adminproductos/vehiculos/crear-vehiculos/crear-vehiculos.component.html
@@ -1,1 +1,115 @@
-<p>crear-vehiculos works!</p>
+<div class="container">
+  <h2 mat-dialog-title>{{ clase }} cliente</h2>
+  <mat-spinner *ngIf="loading" [diameter]="30"></mat-spinner>
+</div>
+<form [formGroup]="fgValidador" (ngSubmit)="setGuardar()">
+  <div>
+    <div class="column-2">
+      <div *ngIf="clase == 'Editar'" class="column card">
+        <label>Id</label>
+        <input
+          formControlName="id"
+          placeholder="campo"
+          matInput
+          autocomplete="off"
+        />
+      </div>
+      <div class="column card">
+        <label>Color</label>
+        <input
+          formControlName="color"
+          placeholder="campo"
+          matInput
+          autocomplete="off"
+        />
+      </div>
+    </div>
+
+    <div class="column-2">
+      <div class="column card">
+        <label>Modelo</label>
+        <input
+          formControlName="modelo"
+          placeholder="campo"
+          matInput
+          autocomplete="off"
+        />
+      </div>
+      <div class="column card">
+        <label>Serie_motor</label>
+        <input
+          formControlName="serie_motor"
+          placeholder="campo"
+          matInput
+          autocomplete="off"
+        />
+      </div>
+    </div>
+
+    <div class="column-2">
+      <div class="column card">
+        <label>Estado</label>
+        <input
+          formControlName="estado"
+          placeholder="campo"
+          matInput
+          autocomplete="off"
+        />
+      </div>
+      <div class="column card">
+        <label>Placa</label>
+        <input
+          formControlName="placa"
+          placeholder="campo"
+          matInput
+          autocomplete="off"
+        />
+      </div>
+    </div>
+
+    <div class="column-2">
+      <div class="column card">
+        <label>servicioId</label>
+        <input
+          formControlName="servicioId"
+          placeholder="campo"
+          matInput
+          autocomplete="off"
+        />
+      </div>
+      <div class="column card">
+        <mat-label>Cliente</mat-label>
+        <mat-select formControlName="clienteId">
+          <mat-option *ngFor="let item of tipoDocumento" [value]="item.id">
+            <span *ngIf="item.id == 'clienteId'"></span>{{ item.nombre }}
+          </mat-option>
+        </mat-select>
+      </div>
+    </div>
+
+    <div class="column-2">
+      <div class="column card">
+        <mat-label>Categoria</mat-label>
+        <mat-select formControlName="clienteId">
+          <mat-option *ngFor="let categoria of listaCategoria" [value]="categoria.id">
+            <span *ngIf="categoria.id == 'clienteId'"></span>{{ categoria.nombre }}
+          </mat-option>
+        </mat-select>
+      </div>
+    </div>
+
+  </div>
+  <div class="button-center">
+    <button type="button" routerLink="/productos/listar-vehiculos" mat-button>
+      Cancelar
+    </button>
+    <button
+      type="submit"
+      [disabled]="!fgValidador.valid"
+      mat-button
+      cdkFocusInitial
+    >
+      Aceptar
+    </button>
+  </div>
+</form>
