--- a/src/app/modulos/adminproductos/vehiculos/listar-vehiculos/listar-vehiculos.component.html
+++ b/src/app/modulos/adminproductos/vehiculos/listar-vehiculos/listar-vehiculos.component.html
@@ -1,1 +1,65 @@
-<p>listar-vehiculos works!</p>
+<p>Lista de marcas de carros</p>
+<!---Modal crear nueva categoria-->
+<a class="btn flow-text" routerLink="/productos/crear-vehiculo">
+  <span class="material-icons">Lista vehiculo</span>
+</a>
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="color">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>color</th>
+      <td mat-cell *matCellDef="let element">{{ element.color }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="modelo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>modelo</th>
+      <td mat-cell *matCellDef="let element">{{ element.modelo }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="serie_motor">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>serie_motor</th>
+      <td mat-cell *matCellDef="let element">{{ element.serie_motor }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="placa">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>placa</th>
+      <td mat-cell *matCellDef="let element">{{ element.placa }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="clienteId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</th>
+      <td mat-cell *matCellDef="let element">{{ element.categoriaMarcaId }}</td>
+    </ng-container>
+    <!-- Weight Column -->
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef>Acciones</th>
+      <td mat-cell *matCellDef="let element">
+        <a routerLink="/productos/editar-vehiculo/{{ element.id }}"
+          ><span class="material-icons">edit</span></a
+        >
+        <span (click)="addDeleteModals(element.id)" class="material-icons"
+          >delete</span
+        >
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+    aria-label="Select page of periodic elements"
+  >
+  </mat-paginator>
+</div>
