--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<div class="container">
-  <mat-card class="example-card">
+<div class="container screen">
+  <mat-card >
     <router-outlet> </router-outlet>
   </mat-card>
 </div>
