--- a/src/app/plantilla/inicio/inicio.component.html
+++ b/src/app/plantilla/inicio/inicio.component.html
@@ -1,3 +1,75 @@
-<div>
-  <p>Bienvenidos al sistema de tecnologias mintic</p>
+<div class="container-inicio">
+  <h2>Bienvenidos al sistema de mantenimientos mintic</h2>
+  <div class="content">
+    <div class="flex margin card">
+      <div class="title">
+        <h4>Mantenimiento preventivo</h4>
+        <img [src]="myImagenPreventivo" alt="gensoft mantenimientos" />
+      </div>
+      <div class="detalles">
+        <ul>
+          <li>Corrección en el motor</li>
+          <li>Arreglo de la suspensión</li>
+          <li>Cambio de llantas</li>
+          <li>Reparación de transmisión y dirección</li>
+          <li>Correctivo del sistema de aire acondicionado</li>
+          <li>Revisión del sistema de refrigeración</li>
+          <li>Cambio de batería</li>
+          <li>Trabajos de latonería y pintura</li>
+        </ul>
+        <p>
+          Al reparar las fallas y defectos de tu vehículo, alargas la vida útil
+          del mismo y tienes más seguridad al momento de conducir.
+        </p>
+      </div>
+    </div>
+    <br>
+    <div class="flex margin card">
+      <div class="title">
+        <h4>Mantenimiento predictivo</h4>
+        <img [src]="myImagenPredictivo" alt="gensoft mantenimientos" />
+      </div>
+      <div class="detalles">
+        <ul>
+          <li>Corrección en el motor</li>
+          <li>Arreglo de la suspensión</li>
+          <li>Cambio de llantas</li>
+          <li>Reparación de transmisión y dirección</li>
+          <li>Correctivo del sistema de aire acondicionado</li>
+          <li>Revisión del sistema de refrigeración</li>
+          <li>Cambio de batería</li>
+          <li>Trabajos de latonería y pintura</li>
+        </ul>
+        <p>
+          Al reparar las fallas y defectos de tu vehículo, alargas la vida útil
+          del mismo y tienes más seguridad al momento de conducir.
+        </p>
+      </div>
+    </div>
+    <br>
+    <div class="flex margin card">
+      <div class="title">
+        <h4>Mantenimiento correctivo</h4>
+        <img [src]="myImagenCorrectivo" alt="gensoft mantenimientos" />
+      </div>
+      <div class="detalles ">
+        <ul>
+          <li>Deteccion y confirmacion de fallas</li>
+          <li></li>
+          <li>Cambio de llantas</li>
+          <li>Reparación de transmisión y dirección</li>
+          <li>Correctivo del sistema de aire acondicionado</li>
+          <li>Revisión del sistema de refrigeración</li>
+          <li>Cambio de batería</li>
+          <li>Trabajos de latonería y pintura</li>
+        </ul>
+        <p>
+          Al reparar las fallas y defectos de tu vehículo, alargas la vida útil
+          del mismo y tienes más seguridad al momento de conducir.
+        </p>
+      </div>
+    </div>
+    <br>
+  </div>
+
 </div>
