--- a/src/app/modulos/administracion/clientes/crear-cliente/crear-cliente.component.html
+++ b/src/app/modulos/administracion/clientes/crear-cliente/crear-cliente.component.html
@@ -1,127 +1,146 @@
-<div class="container">
-  <h2 mat-dialog-title>{{ clase }} cliente</h2>
+<div>
+  <div class="flex">
+    <h3>{{ clase }} cliente</h3>
+    <mat-spinner *ngIf="loading" [diameter]="30"></mat-spinner>
+  </div>
+  <form [formGroup]="fgValidador" (ngSubmit)="setGuardar()">
+    <div class="contenido">
+      <div class="column-2">
+        <!-- campo id -->
+        <div *ngIf="clase == 'Editar'" class="mat-form-field-flex  column">
+          <label for="id">ID</label>
+          <input placeholder="id" type="text" formControlName="id" />
+        </div>
+
+        <!-- campo cedula -->
+        <div class="mat-form-field-flex  column">
+          <label for="cedula">Cedula</label>
+          <input placeholder="cedula" type="text" formControlName="cedula" />
+        </div>
+      </div>
+
+      <div class="column-2">
+        <!-- campo nombre -->
+        <div class="mat-form-field-flex  column">
+          <label for="nombre">Nombres</label>
+          <input placeholder="nombre" type="text" formControlName="nombre" />
+        </div>
+
+        <!-- campo apellidos -->
+        <div class="mat-form-field-flex  column">
+          <label for="apellido">Apellidos</label>
+          <input
+            placeholder="apellido"
+            type="text"
+            formControlName="apellido"
+          />
+        </div>
+      </div>
+
+      <div class="column-2">
+        <!-- campo telefono -->
+        <div class="mat-form-field-flex  column">
+          <label for="telefono">Telefono</label>
+          <input
+            placeholder="telefono"
+            type="text"
+            formControlName="telefono"
+          />
+        </div>
+
+        <!-- campo correo -->
+        <div class="mat-form-field-flex  column">
+          <label for="correo">Correo</label>
+          <input placeholder="correo" type="text" formControlName="correo" />
+        </div>
+      </div>
+
+      <div class="column-2">
+        <!-- campo direccion -->
+        <div class="mat-form-field-flex  column">
+          <label for="direccion">Direccion</label>
+          <input
+            placeholder="direccion"
+            type="text"
+            formControlName="direccion"
+          />
+        </div>
+
+        <!-- campo Fecha de nacimiento -->
+        <div class="mat-form-field-flex  column">
+          <label for="fecha_nacimiento">Fecha de Nacimiento</label>
+          <input
+            placeholder="fecha_nacimiento"
+            type="date"
+            formControlName="fecha_nacimiento"
+          />
+        </div>
+      </div>
+
+      <div class="column-2">
+        <!-- campo edad -->
+        <div *ngIf="clase == 'Editar'" class="mat-form-field-flex  column">
+          <label for="edad">edad</label>
+          <input placeholder="edad" type="text" formControlName="edad" />
+        </div>
+
+        <!-- campo clave -->
+        <div *ngIf="clase == 'Editar'" class="mat-form-field-flex  column">
+          <label for="clave">Clave</label>
+          <div class="flex">
+            <input
+              placeholder="clave"
+              formControlName="clave"
+              matInput
+              [type]="hide ? 'password' : 'text'"
+            />
+            <button
+              mat-icon-button
+              matSuffix
+              type="button"
+              (click)="hide = !hide"
+              [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide"
+            >
+              <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="column-2">
+        <!-- campo empresa -->
+        <div *ngIf="clase == 'Editar'" class="mat-form-field-flex  column">
+          <label for="empresa_id">Empresa</label>
+          <input
+            placeholder="empresaId"
+            type="text"
+            formControlName="empresaId"
+          />
+        </div>
+      </div>
+
+      <!-- Botones -->
+      <div class="button-center">
+        <button
+          type="button"
+          mat-button
+          class="btn-cancelar"
+          routerLink="/administracion/listar-clientes"
+        >
+          Cancelar
+        </button>
+
+        <button
+          type="button"
+          mat-button
+          class="btn-aceptar"
+          [disabled]="!fgValidador.valid"
+          type="submit"
+        >
+          Aceptar
+        </button>
+      </div>
+    </div>
+  </form>
 </div>
-<form [formGroup]="fgValidador" (ngSubmit)="setGuardar()">
-  <div>
-    <div class="column-2" >
-      <div class="column card">
-        <label >ID</label>
-        <input formControlName="id" placeholder="campo" matInput autocomplete="off" />
-      </div>
-
-      <div class="column card">
-        <label>Cedula</label>
-        <input
-          formControlName="cedula"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-    </div>
-
-    <div class="column-2">
-      <div class="column card">
-        <label>Nombre</label>
-        <input
-          formControlName="nombre"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-
-      <div class="column card">
-        <label>Apellido</label>
-        <input
-          formControlName="apellido"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-    </div>
-
-    <div class="column-2">
-      <div class="column card">
-        <label>Telefono</label>
-        <input
-          formControlName="telefono"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-      <div class="column card">
-        <label>Correo</label>
-        <input
-          formControlName="correo"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-    </div>
-
-    <div class="column-2">
-      <div class="column card">
-        <label>Direccion</label>
-        <input
-          formControlName="direccion"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-      <div class="column card">
-        <label>Fecha nacimiento</label>
-        <input
-          formControlName="fecha_nacimiento"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-    </div>
-
-    <div class="column-2">
-      <div class="column card">
-        <label>Edad</label>
-        <input
-          formControlName="edad"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-      <div class="column card">
-        <label>Clave</label>
-        <input
-          formControlName="clave"
-          type="password"
-          placeholder="campo"
-          matInput
-          autocomplete="off"
-        />
-      </div>
-    </div>
-  </div>
-
-  <div class="button-center">
-    <button
-      type="button"
-      routerLink="/administracion/listar-clientes"
-      mat-button
-    >
-      Cancelar
-    </button>
-    <button
-      type="submit"
-      [disabled]="!fgValidador.valid"
-      mat-button
-      cdkFocusInitial
-    >
-      Aceptar
-    </button>
-  </div>
-</form>
