--- a/src/app/modulos/administracion/clientes/detalles-cliente/detalles-cliente.component.html
+++ b/src/app/modulos/administracion/clientes/detalles-cliente/detalles-cliente.component.html
@@ -17,8 +17,8 @@
       <p><span>Clave: </span>{{ clave }}</p>
     </div>
   </div>
-  <div mat-dialog-actions align="end">
-    <button mat-button (click)="cancelar()">Cancelar</button>
-    <button class="waves-effect waves-light btn">Aceptar</button>
+  <div mat-dialog-actions align="center">
+    <button class="btn-cancelar" mat-button (click)="cancelar()">Cancelar</button>
+    <button class="btn btn-aceptar">Aceptar</button>
   </div>
 </div>
