--- a/src/app/modulos/adminproductos/vehiculos/listar-vehiculos/listar-vehiculos.component.html
+++ b/src/app/modulos/adminproductos/vehiculos/listar-vehiculos/listar-vehiculos.component.html
@@ -1,7 +1,7 @@
-<p>Lista de marcas de carros</p>
+<h3>Lista de vehiculos</h3>
 <!---Modal crear nueva categoria-->
-<a class="btn flow-text" routerLink="/productos/crear-vehiculo">
-  <span class="material-icons">Lista vehiculo</span>
+<a class="btn flow-text nuevo" routerLink="/productos/crear-vehiculo">
+  <span class="">nuevo</span>
 </a>
 
 <div class="mat-elevation-z8">
@@ -37,16 +37,16 @@
     <!-- Name Column -->
     <ng-container matColumnDef="clienteId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</th>
-      <td mat-cell *matCellDef="let element">{{ element.categoriaMarcaId }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.clienteId }}</td>
     </ng-container>
     <!-- Weight Column -->
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let element">
         <a routerLink="/productos/editar-vehiculo/{{ element.id }}"
-          ><span class="material-icons">edit</span></a
+          ><span class="material-icons edit">edit</span></a
         >
-        <span (click)="addDeleteModals(element.id)" class="material-icons"
+        <span (click)="addDeleteModals(element.id)" class="material-icons delete"
           >delete</span
         >
       </td>
