--- a/src/app/plantilla/header/header.component.html
+++ b/src/app/plantilla/header/header.component.html
@@ -4,8 +4,8 @@
     <a routerLink="/" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li *ngIf="seInicioSesion"><a routerLink="/administracion/listar-clientes">Clientes</a></li>
-      <li *ngIf="seInicioSesion"><a routerLink="/administracion/listar-empleados">Empleados</a></li>
-      <li *ngIf="seInicioSesion"><a routerLink="/administracion/listar-directivos">Directivos</a></li>
+     <!-- <li *ngIf="seInicioSesion"><a routerLink="/administracion/listar-empleados">Empleados</a></li>-->
+     <!-- <li *ngIf="seInicioSesion"><a routerLink="/administracion/listar-directivos">Directivos</a></li>-->
       <li *ngIf="seInicioSesion"><a routerLink="/productos/listar-vehiculos">Vehiculos</a></li>
       <li *ngIf="seInicioSesion"><a routerLink="/productos/listar-categorias">Categorias</a></li>
       <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cerrarsesion">salir</a></li>
