--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,113 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/* clase para botones*/
+
+.btn-aceptar {
+  background: rgb(78, 170, 78);
+}
+
+.btn-aceptar[disabled]:hover {
+  cursor: not-allowed;
+}
+
+.btn-aceptar[disabled="false"]:hover {
+  background: rgb(50, 121, 50);
+  color: white;
+}
+
+.btn-cancelar {
+  background: rgb(242, 29, 29);
+}
+
+.btn-cancelar:hover {
+  background: rgba(243, 22, 22, 0.771);
+  color: white;
+}
+
+.button-center {
+  text-align: center;
+}
+.button-center button {
+  margin: 10px;
+}
+
+/* clase para Label*/
+label {
+  font-size: 14px;
+  color: #075b63;
+}
+
+/* clase para Inpun*/
+input {
+  font-size: 13px;
+  color: #03020f;
+}
+
+.padding-left {
+  padding: 10px 10px 2px;
+}
+
+.flex {
+  display: flex;
+}
+
+.edit {
+  color: green;
+  padding: 5px;
+}
+
+.delete {
+  padding: 5px;
+  color: red;
+}
+.delete:hover {
+  color: white;
+  cursor: pointer;
+  background: red;
+  border-radius: 10px;
+}
+
+.details {
+  padding: 5px;
+  color: rgb(42, 133, 102);
+}
+
+.details:hover {
+  color: white;
+  cursor: pointer;
+  background: mediumseagreen;
+  border-radius: 10px;
+}
+
+.edit:hover {
+  color: white;
+  cursor: pointer;
+  background: rgb(91, 214, 91);
+  border-radius: 10px;
+}
+
+.nuevo {
+  margin-bottom: 10px;
+}
+
+h3 {
+  width: 100%;
+  padding: 5px;
+  font-size: 20px;
+  color: #03020f;
+}
+
+
+.aceptar{
+  background: #43c4cf;
+  padding: 10px;
+}
